--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ cache: bundler
 before_install:
   - gem install bundler
   - gem update bundler
+install:
+  - bundle install
+before_script:
+  - bundle update
 rvm:
   - 2.5
   - 2.4
